crates/axiom-macros/tests/compile-fail/cf-invalid-cell-layer.stderr
error: invalid layer 'invalid_layer': expected exec|validate|agent|oversight
 --> tests/compile-fail/cf-invalid-cell-layer.rs:2:22
  |
2 | #[axiom_macros::cell("invalid_layer")]
  |                      ^^^^^^^^^^^^^^^
